# backend/src/modules/components/infrastructure/http/controllers/component/dto/register-component.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class RegisterComponentDto {
+  @IsString()
+  @IsNotEmpty()
+  @ApiProperty({ example: 'Bolt' })
+  name: string;
+}
